--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -129,9 +129,13 @@ echo = TRUE
 valuesMeanMedian2 <- c(mean = round(mean(sumTotal2)),median = round(median(sumTotal2)))
 print(valuesMeanMedian2)
 ```
+#### Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+They show differences in the median and in the histograms. Based on the method used for filling in missing values, we can get different mean and median values. The histogram can also be different based on the strategy we used to fill in the missing values, but not much, as with the row data mean = 9354 median = 10395 and with the filled-in missing values mean=10750 median=10641
+
 
 ## Weekdays and weekends
-### Creation a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day
+### Creation a new factor variable in the dataset with two levels – 'weekday' and 'weekend' indicating whether a given date is a weekday or weekend day
 ```{r}
 echo = TRUE
 data2$date <- as.Date(data2$date)
